--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
+        <activity android:name=".theme24.atm.CashMachine">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".theme16TestingAndDebugging.color.MainChangeColorActivity" />
         <activity android:name=".theme16TestingAndDebugging.color.ChangeColorActivity" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.gameInterface.Records" />
@@ -18,15 +24,7 @@
         <activity android:name=".theme14InterfaceOfAndroidAplication.gameInterface.FirstPage" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.ExercisesWithViews" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.qize.QuizActivity" />
-
-        <activity android:name=".theme16TestingAndDebugging.AutorizationAndChangingBackgroundColorsActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+        <activity android:name=".theme16TestingAndDebugging.AutorizationAndChangingBackgroundColorsActivity"/>
     </application>
 
 </manifest>
