--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lessonsFromSamsung">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,7 +26,13 @@
         <activity android:name=".theme14InterfaceOfAndroidAplication.gameInterface.FirstPage" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.ExercisesWithViews" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.qize.QuizActivity" />
-        <activity android:name=".theme16TestingAndDebugging.AutorizationAndChangingBackgroundColorsActivity"/>
+        <activity android:name=".theme16TestingAndDebugging.AutorizationAndChangingBackgroundColorsActivity" />
+
+        <service
+            android:name=".theme25.example.MyService"
+            android:enabled="true"
+            android:exported="true" />
+
     </application>
 
 </manifest>
