Work with services

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".theme24.atm.CashMachine">
+        <activity android:name=".theme25.ServiceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".theme24.atm.CashMachine">
+
         </activity>
         <activity android:name=".theme16TestingAndDebugging.color.MainChangeColorActivity" />
         <activity android:name=".theme16TestingAndDebugging.color.ChangeColorActivity" />
@@ -32,6 +35,10 @@
             android:name=".theme25.example.MyService"
             android:enabled="true"
             android:exported="true" />
+
+        <service android:name=".theme25.ToastService"
+            android:enabled="true"
+            android:exported="true"/>
 
     </application>
 
