--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".theme27_2Dgraphics.PasswordStrength">
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".theme27_2Dgraphics.ticTacToe.TicTacToe"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".theme27_2Dgraphics.GraphicsActivity" />
+        <activity android:name=".theme27_2Dgraphics.draw.GraphicsActivity" />
         <activity android:name=".theme26Fragment.ActivityWithFragments" />
         <activity android:name=".theme25Services.ServiceActivity" />
         <activity android:name=".theme24Threads.atm.CashMachine" />
