--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".theme25Services.ServiceActivity" />
         <activity android:name=".theme24Threads.atm.CashMachine" />
         <activity android:name=".theme16TestingAndDebugging.color.MainChangeColorActivity" />
-        <activity android:name=".theme16TestingAndDebugging.color.ChangeColorActivity" />
+        <activity android:name=".theme16TestingAndDebugging.color.ChangingColorActivity" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.gameInterface.Records" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.gameInterface.Settings" />
         <activity android:name=".theme14InterfaceOfAndroidAplication.gameInterface.NewGame" />
