--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
+        <activity
+            android:name=".theme49_ClientServerArchitecture.CatFactActivity"
+            android:exported="true" />
         <activity android:name=".theme29_TestSurfaceView.TestSurfaceViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +24,7 @@
             </intent-filter>
             android:exported="true"
         </activity>
-
-        <activity android:name=".theme28_SurfaceView.SurfaceViewActivity">
-
-        </activity>
+        <activity android:name=".theme28_SurfaceView.SurfaceViewActivity"></activity>
         <activity android:name=".theme27_2Dgraphics.PasswordStrength" />
         <activity
             android:name=".theme27_2Dgraphics.ticTacToe.TicTacToe"
