--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -15,14 +16,16 @@
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
         <activity
-            android:name=".theme49_ClientServerArchitecture.CatFactActivity"
-            android:exported="true" />
-        <activity android:name=".theme29_TestSurfaceView.TestSurfaceViewActivity">
+            android:name=".theme49_ClientServerArchitecture.CatFactActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".theme29_TestSurfaceView.TestSurfaceViewActivity">
+
             android:exported="true"
         </activity>
         <activity android:name=".theme28_SurfaceView.SurfaceViewActivity"></activity>
