--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.lesson1"
+        applicationId "com.example.TrainingTasks"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
