--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
-        <activity android:name=".theme30_5_RecyclerView.RecyclerViewActivity">
+        <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            />
         </activity>
+
+        <activity android:name=".theme30_5_RecyclerView.RecyclerViewActivity" />
         <activity android:name=".theme49_ClientServerArchitecture.CatFactActivity" />
         <activity android:name=".theme29_TestSurfaceView.TestSurfaceViewActivity" />
         <activity android:name=".theme28_SurfaceView.SurfaceViewActivity" />
@@ -42,7 +45,7 @@
         <activity android:name=".theme14_InterfaceOfAndroidAplication.gameInterface.FirstPage" />
         <activity android:name=".theme14_InterfaceOfAndroidAplication.ExercisesWithViews" />
         <activity android:name=".theme14_InterfaceOfAndroidAplication.qize.QuizActivity" />
-        <activity android:name=".theme16_TestingAndDebugging.AutorizationAndChangingBackgroundColorsActivity" />
+        <activity android:name=".theme16_TestingAndDebugging.AuthorizationAndChangingBackgroundColorsActivity" />
 
         <service
             android:name=".theme25_Services.example.MyService"
