Add: theme 45 SQLite example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
+        <activity
+            android:name=".theme45_SQLite.SQLiteActivity"
+            android:exported="true" />
         <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +26,6 @@
             </intent-filter>
             />
         </activity>
-
         <activity android:name=".theme30_5_RecyclerView.RecyclerViewActivity" />
         <activity android:name=".theme49_ClientServerArchitecture.CatFactActivity" />
         <activity android:name=".theme29_TestSurfaceView.TestSurfaceViewActivity" />
