Add: theme 50 RXJava

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
         <activity
+            android:name=".theme50_RXJava.RXJavaActivity"
+            android:exported="false" />
+        <activity
             android:name=".theme45_5_Room.RoomActivity"
             android:exported="true" />
         <activity android:name=".main.MainActivity">
