--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
+    implementation "io.insert-koin:koin-core:3.1.4"
+    implementation "io.insert-koin:koin-android:3.1.4"
+
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
