--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
 
     implementation "com.google.android.gms:play-services-location:18.0.0"
 
-    implementation("androidx.room:room-runtime:2.3.0")
-    kapt "androidx.room:room-compiler:2.3.0"
-    implementation("androidx.room:room-rxjava2:2.3.0")
+    implementation("androidx.room:room-runtime:2.4.1")
+    kapt "androidx.room:room-compiler:2.4.1"
+    implementation("androidx.room:room-rxjava2:2.4.1")
     implementation "android.arch.persistence.room:rxjava2:1.1.1"
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.21"
@@ -76,6 +76,7 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.1.4"
 
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:4.3.1'
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation "com.squareup.retrofit2:retrofit:2.8.1"
